test/official_tests/while/fun_in_body.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
while (true) fun foo() {}
